[package]
name = "timestamp"
version = "0.2.0"
edition = "2021"
authors = ["Nicolas Menard <nicolas.p.menard@gmail.com>"]
resolver = "2"
rust-version = "1.83"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
#sysinfo = "0.30.12"
micro-rdk =  {version = "v0.4.1-rc9", git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"]}
rand = "0.8.5"
[target.'cfg(target_os = "espidf")'.dependencies]
#sysinfo = "0.30.12"
micro-rdk = {version = "v0.4.1-rc9", git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"] }

[dependencies]
log = "0.4"
base64 = "0.21.0"

[package.metadata.com.viam]
module = true
